# game

./: CMakeLists.txt  main.cpp  map.cpp  map.h  menu.cpp  menu.h  widget.cpp  widget.h
libsignal/: CMakeLists.txt  signal.hpp  slot.hpp
libwidget/: CMakeLists.txt  application.cpp  application.h  button.cpp  button.h  image.cpp  image.h  rect.cpp  rect.h  signal.cpp  signal.h  signal.hpp  slot.hpp  widget.cpp  widget.h
res/: simple.map
